Refactored structure so that examples are in a seperate module.